--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,9 @@ dependencies {
 
     //Hilt
     implementation("com.google.dagger:hilt-android:2.38.1")
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
     kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+
 
     //Room
     implementation("androidx.room:room-runtime:$roomVersion")
