--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,14 +33,13 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-        useIR = true
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.21'
+        kotlinCompilerExtensionVersion '1.3.0'
+        kotlinCompilerVersion '1.7.10'
     }
     packagingOptions {
         resources {
@@ -70,10 +69,9 @@ dependencies {
 
 
     //Hilt
-    implementation("com.google.dagger:hilt-android:2.38.1")
+    implementation("com.google.dagger:hilt-android:2.42")
     implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
-    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
-
+    kapt("com.google.dagger:hilt-android-compiler:2.42")
 
     //Room
     implementation("androidx.room:room-runtime:$roomVersion")
