Fix bugs and add new features

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.allybros.elephant_todo_app">
+    package="com.allybros.elephant">
 
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
     <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
@@ -11,14 +11,14 @@
 
     <application
         android:allowBackup="true"
-        android:name=".ElephantApp"
+        android:name="com.allybros.elephant.ElephantApp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.Elephant_todo_app">
         <activity
-            android:name=".ui.screen.main.MainActivity"
+            android:name="com.allybros.elephant.ui.screen.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Elephant_todo_app.NoActionBar">
             <intent-filter>
@@ -27,7 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".util.AlarmReceiver"
+        <receiver android:name="com.allybros.elephant.util.AlarmReceiver"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
